--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,17 @@ charset-normalizer==2.0.6
 click==7.1.2
 cryptography==35.0.0
 Flask==1.1.2
+flask-marshmallow==0.14.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
+greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+marshmallow==3.13.0
+marshmallow-sqlalchemy==0.26.1
 psycopg2==2.9.1
 pycodestyle==2.7.0
 pycparser==2.20
