--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==2.0.6
 click==7.1.2
 cryptography==35.0.0
 Flask==1.1.2
+Flask-Cors==3.0.10
 flask-marshmallow==0.14.0
 Flask-RESTful==0.3.8
 Flask-SQLAlchemy==2.4.3
